// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layoutMap — links on maps of one to three hexagons > in detailed > routes three hexagons in a row, neighbours linked as it always has 1`] = `
[
  {
    "id": "l-a",
    "points": [
      {
        "x": 372.56000000000006,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -162,
      },
      {
        "x": 846.5600000000002,
        "y": -162,
      },
      {
        "x": 991.5827097370071,
        "y": -162,
      },
      {
        "x": 991.5827097370071,
        "y": -61,
      },
      {
        "x": 1146.605419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": 0,
      },
      {
        "x": 1599.285419474014,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-b",
    "points": [
      {
        "x": 372.56000000000006,
        "y": 0,
      },
      {
        "x": 459.1600000000001,
        "y": 0,
      },
      {
        "x": 459.1600000000001,
        "y": -52,
      },
      {
        "x": 846.5600000000002,
        "y": -52,
      },
      {
        "x": 1001.5827097370071,
        "y": -52,
      },
      {
        "x": 1001.5827097370071,
        "y": -61,
      },
      {
        "x": 1146.605419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": 0,
      },
      {
        "x": 1599.285419474014,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-c",
    "points": [
      {
        "x": 2626.005419474014,
        "y": 110,
      },
      {
        "x": 2647.005419474014,
        "y": 110,
      },
      {
        "x": 2647.005419474014,
        "y": 57,
      },
      {
        "x": 2818.4054194740143,
        "y": 57,
      },
      {
        "x": 2968.428129211021,
        "y": 57,
      },
      {
        "x": 2968.428129211021,
        "y": -61,
      },
      {
        "x": 3118.450838948028,
        "y": -61,
      },
      {
        "x": 3484.530838948028,
        "y": -61,
      },
      {
        "x": 3484.530838948028,
        "y": 0,
      },
      {
        "x": 3571.130838948028,
        "y": 0,
      },
    ],
  },
]
`;

exports[`layoutMap — links on maps of one to three hexagons > in detailed > routes three hexagons in a row, neighbours linked the same with a current hexagon 1`] = `
[
  {
    "id": "l-a",
    "points": [
      {
        "x": 372.56000000000006,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -162,
      },
      {
        "x": 846.5600000000002,
        "y": -162,
      },
      {
        "x": 991.5827097370071,
        "y": -162,
      },
      {
        "x": 991.5827097370071,
        "y": -61,
      },
      {
        "x": 1146.605419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": 0,
      },
      {
        "x": 1599.285419474014,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-b",
    "points": [
      {
        "x": 372.56000000000006,
        "y": 0,
      },
      {
        "x": 459.1600000000001,
        "y": 0,
      },
      {
        "x": 459.1600000000001,
        "y": -52,
      },
      {
        "x": 846.5600000000002,
        "y": -52,
      },
      {
        "x": 1001.5827097370071,
        "y": -52,
      },
      {
        "x": 1001.5827097370071,
        "y": -61,
      },
      {
        "x": 1146.605419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": 0,
      },
      {
        "x": 1599.285419474014,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-c",
    "points": [
      {
        "x": 2626.005419474014,
        "y": 110,
      },
      {
        "x": 2647.005419474014,
        "y": 110,
      },
      {
        "x": 2647.005419474014,
        "y": 57,
      },
      {
        "x": 2818.4054194740143,
        "y": 57,
      },
      {
        "x": 2968.428129211021,
        "y": 57,
      },
      {
        "x": 2968.428129211021,
        "y": -61,
      },
      {
        "x": 3118.450838948028,
        "y": -61,
      },
      {
        "x": 3484.530838948028,
        "y": -61,
      },
      {
        "x": 3484.530838948028,
        "y": 0,
      },
      {
        "x": 3571.130838948028,
        "y": 0,
      },
    ],
  },
]
`;

exports[`layoutMap — links on maps of one to three hexagons > in detailed > routes three hexagons in a row, the ends linked as it always has 1`] = `
[
  {
    "id": "l-e",
    "points": [
      {
        "x": 372.56000000000006,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -162,
      },
      {
        "x": 846.5600000000002,
        "y": -162,
      },
      {
        "x": 1982.5054194740142,
        "y": -162,
      },
      {
        "x": 1982.5054194740142,
        "y": -804.8341128002394,
      },
      {
        "x": 4790.250838948028,
        "y": -804.8341128002394,
      },
      {
        "x": 4790.250838948028,
        "y": -52,
      },
      {
        "x": 4402.8508389480285,
        "y": -52,
      },
      {
        "x": 4402.8508389480285,
        "y": 0,
      },
      {
        "x": 4316.250838948028,
        "y": 0,
      },
    ],
  },
]
`;

exports[`layoutMap — links on maps of one to three hexagons > in detailed > routes three hexagons in a row, the ends linked the same with a current hexagon 1`] = `
[
  {
    "id": "l-e",
    "points": [
      {
        "x": 372.56000000000006,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -162,
      },
      {
        "x": 846.5600000000002,
        "y": -162,
      },
      {
        "x": 1982.5054194740142,
        "y": -162,
      },
      {
        "x": 1982.5054194740142,
        "y": -804.8341128002394,
      },
      {
        "x": 4790.250838948028,
        "y": -804.8341128002394,
      },
      {
        "x": 4790.250838948028,
        "y": -52,
      },
      {
        "x": 4402.8508389480285,
        "y": -52,
      },
      {
        "x": 4402.8508389480285,
        "y": 0,
      },
      {
        "x": 4316.250838948028,
        "y": 0,
      },
    ],
  },
]
`;

exports[`layoutMap — links on maps of one to three hexagons > in detailed > routes three hexagons in a triangle as it always has 1`] = `
[
  {
    "id": "l-a",
    "points": [
      {
        "x": 372.56000000000006,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -162,
      },
      {
        "x": 846.5600000000002,
        "y": -162,
      },
      {
        "x": 991.5827097370071,
        "y": -162,
      },
      {
        "x": 991.5827097370071,
        "y": -61,
      },
      {
        "x": 1146.605419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": 0,
      },
      {
        "x": 1599.285419474014,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-b",
    "points": [
      {
        "x": 372.56000000000006,
        "y": 0,
      },
      {
        "x": 459.1600000000001,
        "y": 0,
      },
      {
        "x": 459.1600000000001,
        "y": -52,
      },
      {
        "x": 846.5600000000002,
        "y": -52,
      },
      {
        "x": 1001.5827097370071,
        "y": -52,
      },
      {
        "x": 1001.5827097370071,
        "y": -61,
      },
      {
        "x": 1146.605419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": 0,
      },
      {
        "x": 1599.285419474014,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-c",
    "points": [
      {
        "x": 2626.005419474014,
        "y": 110,
      },
      {
        "x": 2647.005419474014,
        "y": 110,
      },
      {
        "x": 2647.005419474014,
        "y": 57,
      },
      {
        "x": 2818.4054194740143,
        "y": 57,
      },
      {
        "x": 2818.4054194740143,
        "y": 887.8341128002394,
      },
      {
        "x": 160.68270973700703,
        "y": 887.8341128002394,
      },
      {
        "x": 160.68270973700703,
        "y": 1646.6682256004788,
      },
      {
        "x": 526.7627097370068,
        "y": 1646.6682256004788,
      },
      {
        "x": 526.7627097370068,
        "y": 1707.6682256004788,
      },
      {
        "x": 613.362709737007,
        "y": 1707.6682256004788,
      },
    ],
  },
  {
    "id": "l-d",
    "points": [
      {
        "x": 1640.082709737007,
        "y": 1597.6682256004788,
      },
      {
        "x": 1661.082709737007,
        "y": 1597.6682256004788,
      },
      {
        "x": 1661.082709737007,
        "y": 1554.6682256004788,
      },
      {
        "x": 1832.482709737007,
        "y": 1554.6682256004788,
      },
      {
        "x": 1832.482709737007,
        "y": 882.8341128002394,
      },
      {
        "x": -825.24,
        "y": 882.8341128002394,
      },
      {
        "x": -825.24,
        "y": -43,
      },
      {
        "x": -675.16,
        "y": -43,
      },
      {
        "x": -675.16,
        "y": 0,
      },
      {
        "x": -646.3600000000001,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-e",
    "points": [
      {
        "x": 372.56000000000006,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -162,
      },
      {
        "x": 846.5600000000002,
        "y": -162,
      },
      {
        "x": 846.5600000000002,
        "y": 892.8341128002394,
      },
      {
        "x": 1832.482709737007,
        "y": 892.8341128002394,
      },
      {
        "x": 1832.482709737007,
        "y": 1655.6682256004788,
      },
      {
        "x": 1445.082709737007,
        "y": 1655.6682256004788,
      },
      {
        "x": 1445.082709737007,
        "y": 1707.6682256004788,
      },
      {
        "x": 1358.482709737007,
        "y": 1707.6682256004788,
      },
    ],
  },
]
`;

exports[`layoutMap — links on maps of one to three hexagons > in detailed > routes three hexagons in a triangle the same with a current hexagon 1`] = `
[
  {
    "id": "l-a",
    "points": [
      {
        "x": 372.56000000000006,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -162,
      },
      {
        "x": 846.5600000000002,
        "y": -162,
      },
      {
        "x": 991.5827097370071,
        "y": -162,
      },
      {
        "x": 991.5827097370071,
        "y": -61,
      },
      {
        "x": 1146.605419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": 0,
      },
      {
        "x": 1599.285419474014,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-b",
    "points": [
      {
        "x": 372.56000000000006,
        "y": 0,
      },
      {
        "x": 459.1600000000001,
        "y": 0,
      },
      {
        "x": 459.1600000000001,
        "y": -52,
      },
      {
        "x": 846.5600000000002,
        "y": -52,
      },
      {
        "x": 1001.5827097370071,
        "y": -52,
      },
      {
        "x": 1001.5827097370071,
        "y": -61,
      },
      {
        "x": 1146.605419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": 0,
      },
      {
        "x": 1599.285419474014,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-c",
    "points": [
      {
        "x": 2626.005419474014,
        "y": 110,
      },
      {
        "x": 2647.005419474014,
        "y": 110,
      },
      {
        "x": 2647.005419474014,
        "y": 57,
      },
      {
        "x": 2818.4054194740143,
        "y": 57,
      },
      {
        "x": 2818.4054194740143,
        "y": 887.8341128002394,
      },
      {
        "x": 160.68270973700703,
        "y": 887.8341128002394,
      },
      {
        "x": 160.68270973700703,
        "y": 1646.6682256004788,
      },
      {
        "x": 526.7627097370068,
        "y": 1646.6682256004788,
      },
      {
        "x": 526.7627097370068,
        "y": 1707.6682256004788,
      },
      {
        "x": 613.362709737007,
        "y": 1707.6682256004788,
      },
    ],
  },
  {
    "id": "l-d",
    "points": [
      {
        "x": 1640.082709737007,
        "y": 1597.6682256004788,
      },
      {
        "x": 1661.082709737007,
        "y": 1597.6682256004788,
      },
      {
        "x": 1661.082709737007,
        "y": 1554.6682256004788,
      },
      {
        "x": 1832.482709737007,
        "y": 1554.6682256004788,
      },
      {
        "x": 1832.482709737007,
        "y": 882.8341128002394,
      },
      {
        "x": -825.24,
        "y": 882.8341128002394,
      },
      {
        "x": -825.24,
        "y": -43,
      },
      {
        "x": -675.16,
        "y": -43,
      },
      {
        "x": -675.16,
        "y": 0,
      },
      {
        "x": -646.3600000000001,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-e",
    "points": [
      {
        "x": 372.56000000000006,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -162,
      },
      {
        "x": 846.5600000000002,
        "y": -162,
      },
      {
        "x": 846.5600000000002,
        "y": 892.8341128002394,
      },
      {
        "x": 1832.482709737007,
        "y": 892.8341128002394,
      },
      {
        "x": 1832.482709737007,
        "y": 1655.6682256004788,
      },
      {
        "x": 1445.082709737007,
        "y": 1655.6682256004788,
      },
      {
        "x": 1445.082709737007,
        "y": 1707.6682256004788,
      },
      {
        "x": 1358.482709737007,
        "y": 1707.6682256004788,
      },
    ],
  },
]
`;

exports[`layoutMap — links on maps of one to three hexagons > in detailed > routes two linked hexagons as it always has 1`] = `
[
  {
    "id": "link-1",
    "points": [
      {
        "x": 372.56000000000006,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -162,
      },
      {
        "x": 846.5600000000002,
        "y": -162,
      },
      {
        "x": 996.5827097370071,
        "y": -162,
      },
      {
        "x": 996.5827097370071,
        "y": -61,
      },
      {
        "x": 1146.605419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": 0,
      },
      {
        "x": 1599.285419474014,
        "y": 0,
      },
    ],
  },
]
`;

exports[`layoutMap — links on maps of one to three hexagons > in detailed > routes two linked hexagons the same with a current hexagon 1`] = `
[
  {
    "id": "link-1",
    "points": [
      {
        "x": 372.56000000000006,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -110,
      },
      {
        "x": 459.1600000000001,
        "y": -162,
      },
      {
        "x": 846.5600000000002,
        "y": -162,
      },
      {
        "x": 996.5827097370071,
        "y": -162,
      },
      {
        "x": 996.5827097370071,
        "y": -61,
      },
      {
        "x": 1146.605419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": -61,
      },
      {
        "x": 1512.685419474014,
        "y": 0,
      },
      {
        "x": 1599.285419474014,
        "y": 0,
      },
    ],
  },
]
`;

exports[`layoutMap — links on maps of one to three hexagons > in overview > routes three hexagons in a row, neighbours linked as it always has 1`] = `
[
  {
    "id": "l-a",
    "points": [
      {
        "x": 233.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -89.5,
      },
      {
        "x": 781.3324676165757,
        "y": -89.5,
      },
      {
        "x": 816.8928482542134,
        "y": -89.5,
      },
      {
        "x": 816.8928482542134,
        "y": -33.5,
      },
      {
        "x": 862.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": 0,
      },
      {
        "x": 1330.453228891851,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-b",
    "points": [
      {
        "x": 233.7324676165759,
        "y": 0,
      },
      {
        "x": 239.7324676165759,
        "y": 0,
      },
      {
        "x": 239.7324676165759,
        "y": -33.5,
      },
      {
        "x": 781.3324676165757,
        "y": -33.5,
      },
      {
        "x": 826.8928482542134,
        "y": -33.5,
      },
      {
        "x": 862.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": 0,
      },
      {
        "x": 1330.453228891851,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-c",
    "points": [
      {
        "x": 2052.9181641250025,
        "y": 56,
      },
      {
        "x": 2115.9181641250025,
        "y": 56,
      },
      {
        "x": 2115.9181641250025,
        "y": 22,
      },
      {
        "x": 2345.518164125003,
        "y": 22,
      },
      {
        "x": 2386.0785447626404,
        "y": 22,
      },
      {
        "x": 2386.0785447626404,
        "y": -33.5,
      },
      {
        "x": 2426.638925400278,
        "y": -33.5,
      },
      {
        "x": 2888.638925400278,
        "y": -33.5,
      },
      {
        "x": 2888.638925400278,
        "y": 0,
      },
      {
        "x": 2894.638925400278,
        "y": 0,
      },
    ],
  },
]
`;

exports[`layoutMap — links on maps of one to three hexagons > in overview > routes three hexagons in a row, neighbours linked the same with a current hexagon 1`] = `
[
  {
    "id": "l-a",
    "points": [
      {
        "x": 233.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -89.5,
      },
      {
        "x": 781.3324676165757,
        "y": -89.5,
      },
      {
        "x": 816.8928482542134,
        "y": -89.5,
      },
      {
        "x": 816.8928482542134,
        "y": -33.5,
      },
      {
        "x": 862.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": 0,
      },
      {
        "x": 1330.453228891851,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-b",
    "points": [
      {
        "x": 233.7324676165759,
        "y": 0,
      },
      {
        "x": 239.7324676165759,
        "y": 0,
      },
      {
        "x": 239.7324676165759,
        "y": -33.5,
      },
      {
        "x": 781.3324676165757,
        "y": -33.5,
      },
      {
        "x": 826.8928482542134,
        "y": -33.5,
      },
      {
        "x": 862.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": 0,
      },
      {
        "x": 1330.453228891851,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-c",
    "points": [
      {
        "x": 2052.9181641250025,
        "y": 56,
      },
      {
        "x": 2115.9181641250025,
        "y": 56,
      },
      {
        "x": 2115.9181641250025,
        "y": 22,
      },
      {
        "x": 2345.518164125003,
        "y": 22,
      },
      {
        "x": 2386.0785447626404,
        "y": 22,
      },
      {
        "x": 2386.0785447626404,
        "y": -33.5,
      },
      {
        "x": 2426.638925400278,
        "y": -33.5,
      },
      {
        "x": 2888.638925400278,
        "y": -33.5,
      },
      {
        "x": 2888.638925400278,
        "y": 0,
      },
      {
        "x": 2894.638925400278,
        "y": 0,
      },
    ],
  },
]
`;

exports[`layoutMap — links on maps of one to three hexagons > in overview > routes three hexagons in a row, the ends linked as it always has 1`] = `
[
  {
    "id": "l-e",
    "points": [
      {
        "x": 233.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -89.5,
      },
      {
        "x": 781.3324676165757,
        "y": -89.5,
      },
      {
        "x": 1603.9856965084268,
        "y": -89.5,
      },
      {
        "x": 1603.9856965084268,
        "y": -662.3122747062769,
      },
      {
        "x": 3909.7038606334295,
        "y": -662.3122747062769,
      },
      {
        "x": 3909.7038606334295,
        "y": -33.5,
      },
      {
        "x": 3368.1038606334296,
        "y": -33.5,
      },
      {
        "x": 3368.1038606334296,
        "y": 0,
      },
      {
        "x": 3362.1038606334296,
        "y": 0,
      },
    ],
  },
]
`;

exports[`layoutMap — links on maps of one to three hexagons > in overview > routes three hexagons in a row, the ends linked the same with a current hexagon 1`] = `
[
  {
    "id": "l-e",
    "points": [
      {
        "x": 233.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -89.5,
      },
      {
        "x": 781.3324676165757,
        "y": -89.5,
      },
      {
        "x": 1603.9856965084268,
        "y": -89.5,
      },
      {
        "x": 1603.9856965084268,
        "y": -662.3122747062769,
      },
      {
        "x": 3909.7038606334295,
        "y": -662.3122747062769,
      },
      {
        "x": 3909.7038606334295,
        "y": -33.5,
      },
      {
        "x": 3368.1038606334296,
        "y": -33.5,
      },
      {
        "x": 3368.1038606334296,
        "y": 0,
      },
      {
        "x": 3362.1038606334296,
        "y": 0,
      },
    ],
  },
]
`;

exports[`layoutMap — links on maps of one to three hexagons > in overview > routes three hexagons in a triangle as it always has 1`] = `
[
  {
    "id": "l-a",
    "points": [
      {
        "x": 233.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -89.5,
      },
      {
        "x": 781.3324676165757,
        "y": -89.5,
      },
      {
        "x": 816.8928482542134,
        "y": -89.5,
      },
      {
        "x": 816.8928482542134,
        "y": -33.5,
      },
      {
        "x": 862.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": 0,
      },
      {
        "x": 1330.453228891851,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-b",
    "points": [
      {
        "x": 233.7324676165759,
        "y": 0,
      },
      {
        "x": 239.7324676165759,
        "y": 0,
      },
      {
        "x": 239.7324676165759,
        "y": -33.5,
      },
      {
        "x": 781.3324676165757,
        "y": -33.5,
      },
      {
        "x": 826.8928482542134,
        "y": -33.5,
      },
      {
        "x": 862.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": 0,
      },
      {
        "x": 1330.453228891851,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-c",
    "points": [
      {
        "x": 2052.9181641250025,
        "y": 56,
      },
      {
        "x": 2115.9181641250025,
        "y": 56,
      },
      {
        "x": 2115.9181641250025,
        "y": 22,
      },
      {
        "x": 2345.518164125003,
        "y": 22,
      },
      {
        "x": 2345.518164125003,
        "y": 677.3122747062769,
      },
      {
        "x": 80.3603806376376,
        "y": 677.3122747062769,
      },
      {
        "x": 80.3603806376376,
        "y": 1321.1245494125537,
      },
      {
        "x": 542.3603806376376,
        "y": 1321.1245494125537,
      },
      {
        "x": 542.3603806376376,
        "y": 1354.6245494125537,
      },
      {
        "x": 548.3603806376375,
        "y": 1354.6245494125537,
      },
    ],
  },
  {
    "id": "l-d",
    "points": [
      {
        "x": 1270.8253158707894,
        "y": 1298.6245494125537,
      },
      {
        "x": 1333.8253158707894,
        "y": 1298.6245494125537,
      },
      {
        "x": 1333.8253158707894,
        "y": 1264.6245494125537,
      },
      {
        "x": 1563.4253158707893,
        "y": 1264.6245494125537,
      },
      {
        "x": 1563.4253158707893,
        "y": 672.3122747062769,
      },
      {
        "x": -701.7324676165758,
        "y": 672.3122747062769,
      },
      {
        "x": -701.7324676165758,
        "y": -34,
      },
      {
        "x": -551.7324676165758,
        "y": -34,
      },
      {
        "x": -551.7324676165758,
        "y": 0,
      },
      {
        "x": -530.7324676165758,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-e",
    "points": [
      {
        "x": 233.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -89.5,
      },
      {
        "x": 781.3324676165757,
        "y": -89.5,
      },
      {
        "x": 781.3324676165757,
        "y": 682.3122747062769,
      },
      {
        "x": 1563.4253158707893,
        "y": 682.3122747062769,
      },
      {
        "x": 1563.4253158707893,
        "y": 1321.1245494125537,
      },
      {
        "x": 1021.8253158707894,
        "y": 1321.1245494125537,
      },
      {
        "x": 1021.8253158707894,
        "y": 1354.6245494125537,
      },
      {
        "x": 1015.8253158707894,
        "y": 1354.6245494125537,
      },
    ],
  },
]
`;

exports[`layoutMap — links on maps of one to three hexagons > in overview > routes three hexagons in a triangle the same with a current hexagon 1`] = `
[
  {
    "id": "l-a",
    "points": [
      {
        "x": 233.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -89.5,
      },
      {
        "x": 781.3324676165757,
        "y": -89.5,
      },
      {
        "x": 816.8928482542134,
        "y": -89.5,
      },
      {
        "x": 816.8928482542134,
        "y": -33.5,
      },
      {
        "x": 862.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": 0,
      },
      {
        "x": 1330.453228891851,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-b",
    "points": [
      {
        "x": 233.7324676165759,
        "y": 0,
      },
      {
        "x": 239.7324676165759,
        "y": 0,
      },
      {
        "x": 239.7324676165759,
        "y": -33.5,
      },
      {
        "x": 781.3324676165757,
        "y": -33.5,
      },
      {
        "x": 826.8928482542134,
        "y": -33.5,
      },
      {
        "x": 862.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": 0,
      },
      {
        "x": 1330.453228891851,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-c",
    "points": [
      {
        "x": 2052.9181641250025,
        "y": 56,
      },
      {
        "x": 2115.9181641250025,
        "y": 56,
      },
      {
        "x": 2115.9181641250025,
        "y": 22,
      },
      {
        "x": 2345.518164125003,
        "y": 22,
      },
      {
        "x": 2345.518164125003,
        "y": 677.3122747062769,
      },
      {
        "x": 80.3603806376376,
        "y": 677.3122747062769,
      },
      {
        "x": 80.3603806376376,
        "y": 1321.1245494125537,
      },
      {
        "x": 542.3603806376376,
        "y": 1321.1245494125537,
      },
      {
        "x": 542.3603806376376,
        "y": 1354.6245494125537,
      },
      {
        "x": 548.3603806376375,
        "y": 1354.6245494125537,
      },
    ],
  },
  {
    "id": "l-d",
    "points": [
      {
        "x": 1270.8253158707894,
        "y": 1298.6245494125537,
      },
      {
        "x": 1333.8253158707894,
        "y": 1298.6245494125537,
      },
      {
        "x": 1333.8253158707894,
        "y": 1264.6245494125537,
      },
      {
        "x": 1563.4253158707893,
        "y": 1264.6245494125537,
      },
      {
        "x": 1563.4253158707893,
        "y": 672.3122747062769,
      },
      {
        "x": -701.7324676165758,
        "y": 672.3122747062769,
      },
      {
        "x": -701.7324676165758,
        "y": -34,
      },
      {
        "x": -551.7324676165758,
        "y": -34,
      },
      {
        "x": -551.7324676165758,
        "y": 0,
      },
      {
        "x": -530.7324676165758,
        "y": 0,
      },
    ],
  },
  {
    "id": "l-e",
    "points": [
      {
        "x": 233.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -89.5,
      },
      {
        "x": 781.3324676165757,
        "y": -89.5,
      },
      {
        "x": 781.3324676165757,
        "y": 682.3122747062769,
      },
      {
        "x": 1563.4253158707893,
        "y": 682.3122747062769,
      },
      {
        "x": 1563.4253158707893,
        "y": 1321.1245494125537,
      },
      {
        "x": 1021.8253158707894,
        "y": 1321.1245494125537,
      },
      {
        "x": 1021.8253158707894,
        "y": 1354.6245494125537,
      },
      {
        "x": 1015.8253158707894,
        "y": 1354.6245494125537,
      },
    ],
  },
]
`;

exports[`layoutMap — links on maps of one to three hexagons > in overview > routes two linked hexagons as it always has 1`] = `
[
  {
    "id": "link-1",
    "points": [
      {
        "x": 233.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -89.5,
      },
      {
        "x": 781.3324676165757,
        "y": -89.5,
      },
      {
        "x": 821.8928482542134,
        "y": -89.5,
      },
      {
        "x": 821.8928482542134,
        "y": -33.5,
      },
      {
        "x": 862.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": 0,
      },
      {
        "x": 1330.453228891851,
        "y": 0,
      },
    ],
  },
]
`;

exports[`layoutMap — links on maps of one to three hexagons > in overview > routes two linked hexagons the same with a current hexagon 1`] = `
[
  {
    "id": "link-1",
    "points": [
      {
        "x": 233.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -56,
      },
      {
        "x": 239.7324676165759,
        "y": -89.5,
      },
      {
        "x": 781.3324676165757,
        "y": -89.5,
      },
      {
        "x": 821.8928482542134,
        "y": -89.5,
      },
      {
        "x": 821.8928482542134,
        "y": -33.5,
      },
      {
        "x": 862.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": -33.5,
      },
      {
        "x": 1324.453228891851,
        "y": 0,
      },
      {
        "x": 1330.453228891851,
        "y": 0,
      },
    ],
  },
]
`;
